--- a/publications/pub-template.ejs
+++ b/publications/pub-template.ejs
@@ -1,15 +1,46 @@
-<ul class="pub-list list">
-<% for (const item of items) { %>
-  <li <%= metadataAttrs(item) %>>
-    <p class="listing-authors"><%= item.authors %> (<span class="listing-year"><%= item.year %></span>).</p>
-    <p class="listing-title"><strong><%= item.title %></strong></p>
-    <p class="listing-venue">
-      <em><%= item.venue %><% if (item.volume) { %>, <%= item.volume %><% } %><% if (item.pages) { %>, <%= item.pages %><% } %></em>
-      <% if (item.link) { %> <a href="<%- item.link %>" target="_blank">DOI</a><% } %>
-    </p>
-    <a href="<%- item.href %>" class="listing-categories"><%= item.categories %></a><br/>
-    <span class="listing-custom-field"><%= item['custom-field'] %><span>
+```{=html}
+<div class="research project-list">
+<ul class="list">
+    <% for (const item of items) { %>
+        <li class="project" <%=metadataAttrs(item) %>>
+            <div class="project-content listing-pub-info">
+                <p><%= item['pub-info'].reference %></p>
+            </div>
 
-  </li>
-<% } %>
+            <% if(item.categories) { %>
+            <div class="project-categories">
+                <% for (const cat of item.categories) { %>
+                    <div class="project-category"><a href="#category=<%= cat %>">
+                            <%= cat %>
+                        </a></div>
+                    <% } %>
+            </div>
+            <% } %>
+            
+            <div class="project-details-listing">
+                <ul class="project-links">
+                    <li class="project-link details">
+                        <a href="<%- item.path %>" class="listing-name">
+                            <i class="fa-solid fa-circle-info"></i> Full details »
+                        </a>
+                    </li>
+                    <% if (item['pub-info'].links) { %>
+                        <% for (const link of item['pub-info'].links) { %>
+                    <li class="project-link">
+                        <% if (link.local) { %>
+                        <a href="<%- item.path.substring(0, item.path.lastIndexOf('/')) %>/<%- link.url %>">
+                        <% } else { %>
+                        <a href="<%- link.url %>">
+                        <% } %>
+                            <i class="<%- link.icon %>"></i> <%= link.name %>
+                        </a>
+                    </li>
+                        <% } %>
+                    <% } %>
+                </ul>
+            </div>
+        </li>
+        <% } %>
 </ul>
+</div>
+```
